--- a/src/modules/Game/index.css
+++ b/src/modules/Game/index.css
@@ -39,6 +39,7 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
+    margin-top: 32px;
 }
 .turn {
     display: flex;
