--- a/src/modules/Game/styles.scss
+++ b/src/modules/Game/styles.scss
@@ -10,3 +10,13 @@
     }
   }
 }
+
+
+.game-container {
+  position: relative;
+  .wrap-loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
