--- a/src/modules/Game/styles.scss
+++ b/src/modules/Game/styles.scss
@@ -1,11 +1,12 @@
 .header {
   .item-wrapper {
-    background: #20c997;
+    background: #CCE5FF;
+    border: 1px solid #b1cdef;
     padding: 12px 16px;
     border-radius: 4px;
     margin-bottom: 32px;
     p {
-      color: #155724;
+      color: #004085;
       font-size: 18px;
     }
   }
@@ -17,5 +18,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
   }
 }
