--- a/src/modules/Game/index.css
+++ b/src/modules/Game/index.css
@@ -40,6 +40,7 @@ body {
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
     margin-top: 32px;
+    place-items: center;
 }
 .turn {
     display: flex;
