--- a/src/modules/Game/styles.scss
+++ b/src/modules/Game/styles.scss
@@ -10,6 +10,17 @@
       font-size: 18px;
     }
   }
+  .warning-wrapper {
+    background: #FEF3CD;
+    border: 1px solid #ffeeba;
+    padding: 12px 16px;
+    border-radius: 4px;
+    margin-bottom: 32px;
+    p {
+      color: #856404;
+      font-size: 18px;
+    }
+  }
 }
 
 
